[package]
authors = [
  "Arnaud de Bossoreille <arnaud.debossoreille@gmail.com>",
  "Pocket7878 <poketo7878@gmail.com>",
]
description = "BulletML library in Rust with Bevy game engine suppor"
edition = "2021"
license-file = "LICENSE"
name = "bevy_bulletml"
repository = "https://github.com/pocket7878/bevy_bulletml"
version = "0.2.1"

[dependencies]
bevy = {git = "https://github.com/bevyengine/bevy", features = ["dynamic"]}
derive-new = "0.5"
fasteval = "0.2"
indextree = "4.0"
regex = "1.3"
roxmltree = "0.9"
thiserror = "1.0"

[dev-dependencies]
matches = "0.1"

[features]
backtrace = []
